Sync: overflow-x fix

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ html {
   text-rendering: optimizeLegibility;
   scroll-behavior: smooth;
   scroll-padding-top: 80px;
+  overflow-x: hidden;
 }
 
 body {
@@ -20,6 +21,7 @@ body {
   font-size: 16px;
   color: #222222;
   background-color: #ffffff;
+  overflow-x: hidden;
 }
 
 img, picture, video, canvas, svg { display: block; max-width: 100%; height: auto; }
